--- a/src/app/auth-components/forgot-password/forgot-password.component.html
+++ b/src/app/auth-components/forgot-password/forgot-password.component.html
@@ -13,18 +13,18 @@
     >
       <h1>Let's recover your account</h1>
 
-      <form class="form" *ngIf="!emailSent; else success">
+      @if (!emailSent) {
+      <form class="form">
         <fieldset class="form-element">
           <label>
             <p class="form-label">Account's email</p>
             <input type="email" [formControl]="emailAddress" />
           </label>
-          <p
-            class="input-error"
-            *ngIf="emailAddress.hasError('emailError') && emailAddress.dirty"
-          >
+          @if (emailAddress.hasError('emailError') && emailAddress.dirty) {
+          <p class="input-error">
             This is not an email, please check for a typo.
           </p>
+          }
         </fieldset>
         <button
           [appMatSpinnerToggler]="emailAddress.valid"
@@ -33,21 +33,19 @@
           class="submit-button"
           appCustomMatRipple
         >
-          <ng-container *ngIf="emailSent; else buttonContent">
-            <mat-spinner class="sending-spinner"></mat-spinner>
-          </ng-container>
-          <ng-template #buttonContent>Send email</ng-template>
+          @if (emailSent) {
+          <mat-spinner class="sending-spinner"></mat-spinner>
+          } @else { Send email }
         </button>
       </form>
-
-      <ng-template #success>
-        <div class="success">
-          <p>
-            The email with a reset link has been sent to your e-mail: <br />
-            <strong>{{ emailAddress.getRawValue() }}</strong>
-          </p>
-        </div>
-      </ng-template>
+      } @else {
+      <div class="success">
+        <p>
+          The email with a reset link has been sent to your e-mail: <br />
+          <strong>{{ emailAddress$ | async }}</strong>
+        </p>
+      </div>
+      }
     </div>
   </section>
 </main>
