--- a/src/app/ui/navbar/navbar.component.html
+++ b/src/app/ui/navbar/navbar.component.html
@@ -8,15 +8,16 @@
     [opened]="(isHandset$ | async) === false"
   >
     <mat-toolbar class="toolbar">
+      @if (isHandset$ | async) {
       <button
         type="button"
         aria-label="Close sidenav"
         mat-icon-button
         (click)="drawer.close()"
-        *ngIf="isHandset$ | async"
       >
         <mat-icon aria-label="Side nav close icon">close</mat-icon>
       </button>
+      }
       <div class="toolbar__content">
         <span>Menu</span>
       </div>
@@ -27,15 +28,17 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary" class="toolbar">
+      @if (isHandset$ | async) {
       <button
         type="button"
         aria-label="Toggle sidenav"
         mat-icon-button
         (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async"
       >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
+      }
+
       <div class="toolbar__content">
         <ng-content select="#logo"></ng-content>
       </div>
