Provided tests and improvements for forgot-password component

--- a/src/app/auth-components/forgot-password/forgot-password.component.html
+++ b/src/app/auth-components/forgot-password/forgot-password.component.html
@@ -20,26 +20,25 @@
             <p class="form-label">Account's email</p>
             <input type="email" [formControl]="emailAddress" />
           </label>
-          @if (emailAddress.hasError('emailError') && emailAddress.dirty) {
-          <p class="input-error">
+          @if (emailAddress.dirty && emailAddress.hasError('emailError')) {
+          <p class="input-error" data-test="emailError">
             This is not an email, please check for a typo.
           </p>
           }
         </fieldset>
         <button
-          [appMatSpinnerToggler]="emailAddress.valid"
           (click)="checkEmail($event)"
+          (keyup.enter)="checkEmail($event)"
           type="submit"
           class="submit-button"
           appCustomMatRipple
+          data-test="forgot-password-submit-button"
         >
-          @if (emailSent) {
-          <mat-spinner class="sending-spinner"></mat-spinner>
-          } @else { Send email }
+          Send email
         </button>
       </form>
       } @else {
-      <div class="success">
+      <div class="success" data-test="forgot-password-success">
         <p>
           The email with a reset link has been sent to your e-mail: <br />
           <strong>{{ emailAddress$ | async }}</strong>
