--- a/src/app/auth-components/verify/verify.component.html
+++ b/src/app/auth-components/verify/verify.component.html
@@ -12,11 +12,11 @@
         aria-label="Summary of whether the email was sent or an error occurred during this action."
       >
         @switch (sendingState$ | async) { @case ('sending') {
-        <div>
+        <div data-test="sending-state">
           <mat-spinner class="progress-spinner"></mat-spinner>
         </div>
         } @case ('success') {
-        <div class="result">
+        <div class="result" data-test="success-state">
           <app-completion-one
             svgPrimaryColor="var(--color-primary-500)"
             [svgMinMaxWidth]="[200, 300]"
@@ -24,7 +24,7 @@
           <h2 class="result__header">Hurray! 🥳</h2>
           <p>
             You've got mail, but not the spammy kind. We've sent a link to
-            {{ userEmail }} to verify your mind.
+            {{ userEmail }} to verify your email address.
           </p>
           <p>
             Click on it and you'll be all set to enjoy our service without any
@@ -42,13 +42,23 @@
           </button>
         </div>
         } @case ('failure') {
-        <div class="result">
+        <div class="result" data-test="failure-state">
           <h2 class="result__header">Oh no! We've crushed 😬</h2>
           <p>
             Please click the button below to get us back on track
             <app-bullet-train-emoji />
           </p>
-          <button type="button" class="button-failure" appCustomMatRipple>
+
+          @if (!userEmail) {
+          <p data-test="userEmailEmpty">There is no email provided!</p>
+          }
+
+          <button
+            type="button"
+            class="button-failure"
+            (click)="sendEmail()"
+            (keyup.enter)="sendEmail()"
+          >
             Try again
           </button>
         </div>
