--- a/src/app/auth/form.scss
+++ b/src/app/auth/form.scss
@@ -1,12 +1,12 @@
-@use "src/scss/utils.scss" as *;
-@use "src/scss/components.scss" as *;
-@use "src/scss/viewport.scss" as view;
+@use 'src/scss/utils.scss' as *;
+@use 'src/scss/components.scss' as *;
+@use 'src/scss/viewport.scss' as view;
 
 .form-wrapper {
   background-color: var(--color-accent-100);
   color: var(--contrast-color-accent-100);
-  padding: free-space("md");
-  @include border-radius("md");
+  padding: free-space('md');
+  @include border-radius('md');
   @include inset-box-shadow(var(--color-accent-50));
   overflow: hidden;
   display: grid;
@@ -67,15 +67,11 @@ input.valid {
 }
 
 .submit-button {
-  @extend %common-button, %primary-button;
+  @extend %common-button, %common-button-transitions, %primary-button-1;
   font-weight: 600;
   justify-self: end;
   display: grid;
   place-content: center;
-
-  transition: min-width 500ms cubic-bezier(0.455, 0.03, 0.515, 0.955),
-    min-height 500ms cubic-bezier(0.455, 0.03, 0.515, 0.955),
-    box-shadow 250ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
 
   &.sending {
     --size: clamp(var(--h3), 7vmax, 3rem);
